# TDOR

./: .gitignore  CMakeLists.txt  EXTERNAL_LICENSES  README.md  main.c
SAppSys/: App.cpp  App.h  CMakeLists.txt  SubSystem.h  spch.h
SAppSys/Subsystems/: RenderSystem.h  WindowSystem.cpp  WindowSystem.h
SGL/: BufferElement.h  CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  SGL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  glad.c  glad.h
SRenderer/: CMakeLists.txt  MeshPrimitive.cpp  MeshPrimitive.h
SSDL/: CMakeLists.txt  InputSystem.cpp  InputSystem.h
Sandbox/: CMakeLists.txt  main.cpp
Stech/: CMakeLists.txt
Stech/Editor/: EVertice.h  EditorTool.h  StechEditor.cpp  StechEditor.h  main.cpp
Stech/Editor/Tools/: VertexTool.cpp  VertexTool.h  WallTool.cpp  WallTool.h
Stech/Runtime/Core/: Application.cpp  Application.h  GameScript.cpp  GameScript.h  SLua.cpp  SLua.h  Thinker.h  c_lua.cpp
Stech/Runtime/Entities/: EBillboard.cpp  EBillboard.h  ECamera.cpp  ECamera.h  EPawn.cpp  EPawn.h  EReferenceGrid.cpp  EReferenceGrid.h  Entity.h
Stech/Runtime/Math/: CollisionChecks.cpp  CollisionChecks.h  RelativeRect.cpp  RelativeRect.h  Triangulate.cpp  Triangulate.h
Stech/Runtime/SUI/: SDrawable.cpp  SDrawable.h  SLabel.cpp  SLabel.h  SList.cpp  SList.h  SPanel.cpp  SPanel.h  UICanvas.h  UIDrawable.h  UILabel.cpp  UIList.h
Stech/Runtime/Scene/: LevelGeometry.cpp  LevelGeometry.h  Scene.cpp  Scene.h  SectorDef.h
TDOR/src/: CMakeLists.txt  main.c
TDOR_Prototype/src/: main.c
TDOR_temp/src/: main.c
cmake/: CopyAssets.cmake  EnsureGLFW.cmake  EnsureGLM.cmake  EnsureLua.cmake  EnsureRayLib.cmake  Findimgui.cmake
data/: licenses.txt
data/core/lualib/: console.lua  init.lua  inspect.lua  serpent.lua  ui.lua
data/sound/voices/main/: main.py
editor/: CMakeLists.txt  main.c
scripts/: CopyAssets.cmake
sedit/: CMakeLists.txt
sedit/src/: main.c  main.cpp
src/: CMakeLists.txt
src/core/: c_actor.h  c_level.h  c_line.h  c_wall.h  c_walldata.h
src/editor/: CMakeLists.txt  ma.c  main.c
src/renderer/: r_general.h
stech/: CMakeLists.txt  README.md
stech/include/: UIDrawable.h  UILabel.h  UIList.h  c_actor.h  c_level.h  c_line.h  c_lua.h  c_math.h  c_wall.h  c_walldata.h  io_gdata.h  io_rres-raylib.h  io_rres.h  l_config.h  l_io.h  mp_core.h  r_general.h  r_gui.h  r_raygui.h
stech/src/: UIDrawable.cpp  UILabel.cpp  UIList.cpp  c_lua.c  c_lua.cpp  io_gdata.c  l_config.cpp  r_gui.c
